// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookEdit When user is logged in renders book edit with button of LogOut 1`] = `
Array [
  <nav
    className="navbar is-dark"
  >
    <div
      className="container"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
          href="/"
        >
          <img
            alt="\\\\"
            className="d-inline-block align-top"
            src="https://img.icons8.com/emoji/452/orange-book.png"
          />
        </a>
        <div
          className="navbar-burger navbar-dropdown "
          data-target="navMenuColorblack-example"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        className="navbar-menu "
        id="navMenuColorblack-example"
      >
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
          <a
            className="navbar-item"
            href="/users/me"
            onClick={[Function]}
          >
            My Profile
          </a>
          
          <a
            className="navbar-item"
            href="/books"
            onClick={[Function]}
          >
            Books
          </a>
          <a
            className="navbar-item"
            href="https://github.com/IIC2513-2021-1/grupo-demaciagang-p2-frontend"
            target="_blanck"
          >
             About Us
          </a>
          <a
            className="navbar-item"
            href="/chileNecesitaAJoseAntonioKast"
          >
            <img
              alt="\\\\"
              className="d-inline-block align-top"
              height="80"
              src="https://cdn.pixabay.com/photo/2013/07/12/17/50/bookmark-152545_960_720.png"
              width="40"
            />
          </a>
          <div
            className="navbar-item has-dropdown is-hoverable"
          >
            <p
              className="navbar-link"
            >
              Testman
              <div
                className="navbar-dropdown"
              >
                <a
                  className="navbar-item"
                  href="/users/my_profile"
                  onClick={[Function]}
                >
                  Profile
                   
                   
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z"
                    />
                  </svg>
                </a>
                <a
                  className="navbar-item"
                  onClick={[Function]}
                  type="button"
                >
                  Log Out
                   
                   
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
                    />
                  </svg>
                </a>
              </div>
            </p>
          </div>
        </div>
      </div>
    </div>
  </nav>,
  <section
    className="hero Books is-fullheight"
  >
    <div
      className="hero-body"
    >
      <div
        className="container"
      >
        <div
          className="columns is-centered"
        >
          <div
            className="column is-5-tablet is-4-desktop is-3-widescreen"
          >
            <form
              action="#"
              className="box"
              onReset={[Function]}
              onSubmit={[Function]}
            >
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="Title"
                >
                  Title
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      name="title"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Title"
                      type="text"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="isbn"
                >
                  ISBN
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      name="isbn"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="9786124497001"
                      type="number"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M256 25c-38.3 0-53.9 13.6-62.4 30.97-5.6 11.28-7.5 24.61-8.2 37.03h141.1c-.8-12.37-2.9-25.68-8.6-36.97C309.2 38.6 293.6 25 256 25zm-98.9 86l9.1 24h187.5l3.8-24zm-65.6 9.5c-2.35.1-4.56.4-6.55 1-5.26 1.4-9.4 4.3-12.92 10.6-.51 1.1-.57 1.8.4 4.2.99 2.6 3.3 6.2 6.05 10.2 2.75 4 5.91 8.4 8.27 13.6 2.36 5.2 3.95 11.8 1.85 18.6-2.85 9.1-9.6 15.3-16.68 19.6-7.08 4.2-14.83 7.1-22.01 9.8-7.17 2.8-13.75 5.4-18.12 8.4-4.36 2.9-6.26 5.3-6.9 9-.98 5.8 1.76 11.7 7.69 18.7 5.94 7 14.51 14.2 21.79 21.4 6.36 6.4 6.43 14.7 6.1 20.7-.32 6.1-.9 11.5-.53 13.6.15 1 .35 1 .25.9-.1-.1.14.3 2.14.6 3.45.5 11.77-.5 24.69-4.2V296c0-59.1 19.89-112.9 52.19-151.2-8.8-9.5-22.2-18.7-34.8-22.4-3.7-1-7.2-1.6-10.48-1.8-.82-.1-1.62-.1-2.41-.1zm326.6.1c-3.3.2-6.8.8-10.5 1.9-12.6 3.7-26 12.8-34.8 22.3C405.1 183.1 425 236.9 425 296v1.2c12.9 3.7 21.3 4.7 24.7 4.2 2-.3 2.2-.7 2.1-.6 0 .1.1.1.3-.9.3-2.1-.2-7.5-.6-13.6-.3-6-.2-14.3 6.1-20.7 7.3-7.2 15.9-14.4 21.8-21.4 6-7 8.7-12.9 7.7-18.7-.6-3.7-2.5-6.1-6.9-9-4.4-3-10.9-5.6-18.1-8.4-7.2-2.7-14.9-5.6-22-9.8-7.1-4.3-13.8-10.5-16.7-19.6-2.1-6.8-.5-13.4 1.9-18.6 2.3-5.2 5.5-9.6 8.2-13.6 2.8-4 5.1-7.6 6.1-10.2.9-2.4.9-3.1.4-4.2-3.5-6.3-7.7-9.1-12.9-10.6-2-.6-4.2-.9-6.6-.9zM156 153c-31.1 34.8-51 85.7-51 143 0 23.1 3.2 45.2 9.2 65.6C126.3 346.8 145 339 166 339c13.2 0 27.5 2.8 42.2 8.2a48 48 0 0 1 10.1-24.8c-11.8-3.7-19.4-5.4-26.3-5.4-10 0-21.2 3.5-45.2 11.5l-11.8 4V320c0-5.5 1.1-14.3 3.1-25.8 2.1-11.6 5.2-25.4 9.3-38.8 4.1-13.5 9.3-26.6 16-37 3.3-5.1 7.2-9.8 11.7-13.3L192 168l16.9 37.1c4.5 3.5 8.4 8.2 11.7 13.3 6.7 10.4 11.9 23.5 16 37 4.1 13.4 7.2 27.2 9.3 38.8.7 3.8 1.2 7.3 1.7 10.6a48 48 0 0 1 8.4-.8 48 48 0 0 1 8.4.8c.5-3.2 1-6.8 1.7-10.6 2.1-11.6 5.2-25.4 9.3-38.8 4.1-13.5 9.3-26.6 16-37 3.3-5.1 7.2-9.8 11.7-13.3L320 168l16.9 37.1c4.5 3.5 8.4 8.2 11.7 13.3 6.7 10.4 11.9 23.5 16 37 4.1 13.4 7.2 27.2 9.3 38.8 2 11.5 3.1 20.3 3.1 25.8v12.5l-11.8-4c-24-8-35.2-11.5-45.2-11.5-6.9 0-14.4 1.7-26.3 5.4a48 48 0 0 1 10 24.8c14.8-5.4 29-8.2 42.3-8.2 21 0 39.7 7.8 51.8 22.6 6-20.4 9.2-42.5 9.2-65.6 0-57.3-19.9-108.2-51-143zm36 64c-3.5 0-8.2 3.1-13.4 11.1-5.3 8.1-10.1 20-14 32.5-3.9 12.6-6.8 25.8-8.7 36.7-.7 3.7-1.1 6.7-1.5 9.8 10.8-3.5 19.1-6 26.9-7.2A16 16 0 0 1 176 288a16 16 0 0 1 16-16 16 16 0 0 1 16 16 16 16 0 0 1-5.3 11.9c7.8 1.2 16.1 3.7 26.9 7.2-.4-3.1-.8-6.1-1.5-9.8-1.9-10.9-4.8-24.1-8.7-36.7-3.9-12.5-8.7-24.4-14-32.5-5.2-8-9.9-11.1-13.4-11.1zm128 0c-3.5 0-8.2 3.1-13.4 11.1-5.3 8.1-10.1 20-14 32.5-3.9 12.6-6.8 25.8-8.7 36.7-.7 3.7-1.1 6.7-1.5 9.8 10.8-3.5 19.1-6 26.9-7.2A16 16 0 0 1 304 288a16 16 0 0 1 16-16 16 16 0 0 1 16 16 16 16 0 0 1-5.3 11.9c7.8 1.2 16.1 3.7 26.9 7.2-.4-3.1-.8-6.1-1.5-9.8-1.9-10.9-4.8-24.1-8.7-36.7-3.9-12.5-8.7-24.4-14-32.5-5.2-8-9.9-11.1-13.4-11.1zm-64 103a32 32 0 0 0-32 32 32 32 0 0 0 6.2 18.8 48 48 0 0 1 44.6-44.7A32 32 0 0 0 256 320zm-90 37c-21.9 0-36.9 8.3-44.3 26.5C147 445.3 198.1 487 256 487c57.9 0 109-41.7 134.3-103.5-7.4-18.2-22.4-26.5-44.3-26.5-13 0-28.3 3.5-44.7 10.6A48 48 0 0 1 256 400a48 48 0 0 1-45.3-32.4C194.3 360.5 179 357 166 357zm1.7 22.4c22.7 37.7 55.6 55.6 88.3 55.6 32.7 0 65.6-17.9 88.3-55.6l15.4 9.2C334.4 430.9 295.3 453 256 453s-78.4-22.1-103.7-64.4z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="author"
                >
                  Author
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      name="author"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Bastian Hilcker"
                      type="text"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="genre"
                >
                  Genre
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      name="genre"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Fantasy"
                      type="text"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM540 701v53c0 4.4-3.6 8-8 8h-40c-4.4 0-8-3.6-8-8v-53a48.01 48.01 0 1 1 56 0zm152-237H332V240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="description"
                >
                  Description
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="textarea"
                      name="description"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Noice"
                      type="text"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM540 701v53c0 4.4-3.6 8-8 8h-40c-4.4 0-8-3.6-8-8v-53a48.01 48.01 0 1 1 56 0zm152-237H332V240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <input
                className="input"
                name="userId"
                onBlur={[Function]}
                onChange={[Function]}
                type="hidden"
              />
              <div
                className="file"
              >
                <label
                  className="file-label"
                  htmlFor="upload-file"
                >
                  <input
                    className="file-input"
                    id="upload-file"
                    name="resume"
                    onChange={[Function]}
                    type="file"
                  />
                  <span
                    className="file-cta"
                  >
                    <span
                      className="file-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                        />
                        <polyline
                          points="17 8 12 3 7 8"
                        />
                        <line
                          x1="12"
                          x2="12"
                          y1="3"
                          y2="15"
                        />
                      </svg>
                    </span>
                    <span
                      className="file-label"
                    >
                      <h2>
                        Choose a file...
                      </h2>
                    </span>
                  </span>
                </label>
              </div>
              <br />
              <div
                className="field"
              >
                <button
                  className="button is-success"
                  type="submit"
                >
                  Edit Book
                </button>
              </div>
            </form>
            <p>
              
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <footer
    className="footer"
  >
    <div
      className="content has-text-centered"
    >
      <a
        className="navbar-item"
        href="https://www.instagram.com/bastian_hilcker/"
        target="_blanck"
      >
        Check our Instagram
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 306.9c-113.5 0-205.1 91.6-205.1 205.1S398.5 717.1 512 717.1 717.1 625.5 717.1 512 625.5 306.9 512 306.9zm0 338.4c-73.4 0-133.3-59.9-133.3-133.3S438.6 378.7 512 378.7 645.3 438.6 645.3 512 585.4 645.3 512 645.3zm213.5-394.6c-26.5 0-47.9 21.4-47.9 47.9s21.4 47.9 47.9 47.9 47.9-21.3 47.9-47.9a47.84 47.84 0 0 0-47.9-47.9zM911.8 512c0-55.2.5-109.9-2.6-165-3.1-64-17.7-120.8-64.5-167.6-46.9-46.9-103.6-61.4-167.6-64.5-55.2-3.1-109.9-2.6-165-2.6-55.2 0-109.9-.5-165 2.6-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6 46.9 46.9 103.6 61.4 167.6 64.5 55.2 3.1 109.9 2.6 165 2.6 55.2 0 109.9.5 165-2.6 64-3.1 120.8-17.7 167.6-64.5 46.9-46.9 61.4-103.6 64.5-167.6 3.2-55.1 2.6-109.8 2.6-165zm-88 235.8c-7.3 18.2-16.1 31.8-30.2 45.8-14.1 14.1-27.6 22.9-45.8 30.2C695.2 844.7 570.3 840 512 840c-58.3 0-183.3 4.7-235.9-16.1-18.2-7.3-31.8-16.1-45.8-30.2-14.1-14.1-22.9-27.6-30.2-45.8C179.3 695.2 184 570.3 184 512c0-58.3-4.7-183.3 16.1-235.9 7.3-18.2 16.1-31.8 30.2-45.8s27.6-22.9 45.8-30.2C328.7 179.3 453.7 184 512 184s183.3-4.7 235.9 16.1c18.2 7.3 31.8 16.1 45.8 30.2 14.1 14.1 22.9 27.6 30.2 45.8C844.7 328.7 840 453.7 840 512c0 58.3 4.7 183.2-16.2 235.8z"
          />
        </svg>
      </a>
    </div>
  </footer>,
]
`;

exports[`BookEdit When user is not logged in renders LogIn 1`] = `
Array [
  <nav
    className="navbar is-dark"
  >
    <div
      className="container"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
          href="/"
        >
          <img
            alt="\\\\"
            className="d-inline-block align-top"
            src="https://img.icons8.com/emoji/452/orange-book.png"
          />
        </a>
        <div
          className="navbar-burger navbar-dropdown "
          data-target="navMenuColorblack-example"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        className="navbar-menu "
        id="navMenuColorblack-example"
      >
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
          
          <a
            className="navbar-item"
            href="/books"
            onClick={[Function]}
          >
            Books
          </a>
          <a
            className="navbar-item"
            href="https://github.com/IIC2513-2021-1/grupo-demaciagang-p2-frontend"
            target="_blanck"
          >
             About Us
          </a>
          <a
            className="navbar-item"
            href="/chileNecesitaAJoseAntonioKast"
          >
            <img
              alt="\\\\"
              className="d-inline-block align-top"
              height="80"
              src="https://cdn.pixabay.com/photo/2013/07/12/17/50/bookmark-152545_960_720.png"
              width="40"
            />
          </a>
          <a
            className="navbar-item"
            href="/login"
            onClick={[Function]}
          >
            Log In
          </a>
          <a
            className="navbar-item"
            href="/signup"
            onClick={[Function]}
          >
            Sign Up
          </a>
        </div>
      </div>
    </div>
  </nav>,
  <section
    className="hero is-success is-fullheight"
  >
    <div
      className="hero-body"
    >
      <div
        className="container"
      >
        <div
          className="columns is-centered"
        >
          <div
            className="column is-5-tablet is-4-desktop is-3-widescreen"
          >
            <form
              className="box"
              onSubmit={[Function]}
            >
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="email"
                >
                  Email
                  <div
                    className="control has-icons-left  has-icons-right"
                  >
                    <input
                      className="input"
                      id="email"
                      name="email"
                      onChange={[Function]}
                      placeholder="example@domain.com"
                      required={true}
                      type="text"
                      value=""
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
                        />
                      </svg>
                    </span>
                    <span
                      className="icon is-small is-right"
                    >
                      <svg
                        enableBackground="new 0 0 48 48"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        version="1"
                        viewBox="0 0 48 48"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polygon
                          fill="#43A047"
                          points="40.6,12.1 17,35.7 7.4,26.1 4.6,29 17,41.3 43.4,14.9"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="password"
                >
                  Password
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      id="password"
                      name="password"
                      onChange={[Function]}
                      placeholder="*******"
                      required={true}
                      type="password"
                      value=""
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM540 701v53c0 4.4-3.6 8-8 8h-40c-4.4 0-8-3.6-8-8v-53a48.01 48.01 0 1 1 56 0zm152-237H332V240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="checkbox"
                  htmlFor="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  Remember me
                </label>
              </div>
              <div
                className="field"
              >
                <button
                  className="button is-success"
                  disabled={true}
                  type="submit"
                >
                  Login
                </button>
              </div>
            </form>
            <p>
              
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <footer
    className="footer"
  >
    <div
      className="content has-text-centered"
    >
      <a
        className="navbar-item"
        href="https://www.instagram.com/bastian_hilcker/"
        target="_blanck"
      >
        Check our Instagram
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 306.9c-113.5 0-205.1 91.6-205.1 205.1S398.5 717.1 512 717.1 717.1 625.5 717.1 512 625.5 306.9 512 306.9zm0 338.4c-73.4 0-133.3-59.9-133.3-133.3S438.6 378.7 512 378.7 645.3 438.6 645.3 512 585.4 645.3 512 645.3zm213.5-394.6c-26.5 0-47.9 21.4-47.9 47.9s21.4 47.9 47.9 47.9 47.9-21.3 47.9-47.9a47.84 47.84 0 0 0-47.9-47.9zM911.8 512c0-55.2.5-109.9-2.6-165-3.1-64-17.7-120.8-64.5-167.6-46.9-46.9-103.6-61.4-167.6-64.5-55.2-3.1-109.9-2.6-165-2.6-55.2 0-109.9-.5-165 2.6-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6 46.9 46.9 103.6 61.4 167.6 64.5 55.2 3.1 109.9 2.6 165 2.6 55.2 0 109.9.5 165-2.6 64-3.1 120.8-17.7 167.6-64.5 46.9-46.9 61.4-103.6 64.5-167.6 3.2-55.1 2.6-109.8 2.6-165zm-88 235.8c-7.3 18.2-16.1 31.8-30.2 45.8-14.1 14.1-27.6 22.9-45.8 30.2C695.2 844.7 570.3 840 512 840c-58.3 0-183.3 4.7-235.9-16.1-18.2-7.3-31.8-16.1-45.8-30.2-14.1-14.1-22.9-27.6-30.2-45.8C179.3 695.2 184 570.3 184 512c0-58.3-4.7-183.3 16.1-235.9 7.3-18.2 16.1-31.8 30.2-45.8s27.6-22.9 45.8-30.2C328.7 179.3 453.7 184 512 184s183.3-4.7 235.9 16.1c18.2 7.3 31.8 16.1 45.8 30.2 14.1 14.1 22.9 27.6 30.2 45.8C844.7 328.7 840 453.7 840 512c0 58.3 4.7 183.2-16.2 235.8z"
          />
        </svg>
      </a>
    </div>
  </footer>,
]
`;
